snapshots/yumy__diagnostic__test__multiline_1-2.snap
---
source: src/diagnostic.rs
expression: output
---
error[E0277]: `Rc<Mutex<i32>>` cannot be sent between threads safely
@ [src/main.rs]:
│ [line  13]: required by a bound introduced by this call
│ [lines 13..18]: `Rc<Mutex<i32>>` cannot be sent between threads safely
> note: required because it's used within `{closure@src/main.rs:11:36: 11:43}`
> help: within `{closure@src/main.rs:11:36: 11:43}`, the trait `Send` is not implemented for `Rc<Mutex<i32>>`
