snapshots/yumy__diagnostic__test__multiline_2-2.snap
---
source: src/diagnostic.rs
expression: output
---
note: this is a test
@ [just testing]:
│ [lines 1..6]: just testing two multilines
│ [lines 2..4]: hi
│ [lines 4..6]: hello
