snapshots/yumy__diagnostic__test__multiline_2-3.snap
---
source: src/diagnostic.rs
expression: clean
---
error[E0277]: `Rc<Mutex<i32>>` cannot be sent between threads safely
@ [just testing]:
│ [lines 0..5]: just testing two multilines
│ [lines 1..3]: hi
│ [lines 3..5]: hello


