snapshots/yumy__diagnostic__test__singleline-2.snap
---
source: src/diagnostic.rs
expression: output
---
error[E0072]: recursive type `List` has infinite size
@ [src/lib.rs]:
│ [line  4]: 
│ [line  5]: recursive without indirection
> error: could not compile `playground` (lib) due to previous error
