snapshots/yumy__diagnostic__test__singleline.snap
---
source: src/diagnostic.rs
expression: clean
---
error[E0072]: recursive type `List` has infinite size
  @ [src/lib.rs]
5 │ pub enum List {
6 │     Cons(i32, List),
  > error: could not compile `playground` (lib) due to previous error


